--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
-    "react-hot-toast": "^2.4.1"
+    "react-hooks-helper": "^1.6.0",
+    "react-hot-toast": "^2.4.1",
+    "react-multistep": "^5.5.9"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-hooks-helper": "^1.6.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
